# Simple.20201020

./: .gitignore  CMakeLists.txt  README.md  notes.md
docs/: simple.doxygen
src/: CMakeLists.txt  parser.y  scanner.h  scanner.l
src/configure/: CMakeLists.txt  configure.c
src/include/: common.h  compound_names.h  configure.h  debug.h  errors.h  expressions.h  flag_manager.h  hash_table.h  lists.h  memory.h  messages.h  misc.h  parser_support.h  queue.h  scanner.h  semantics.h  stack.h  symbol_table.h  token_stack.h  utils.h  validate_expr.h
src/parser/: CMakeLists.txt  parser.c  parser.h  parser.output  parser.y  scanner.c  scanner.l
src/parser_support/: CMakeLists.txt  compound_names.c  expressions.c  flag_manager.c  symbol_table.c  token_stack.c  validate_expr.c
src/parser_support/.old/: compound_names.c
src/semantics/: CMakeLists.txt  expr_arith.c  expr_compare.c  validate_expr.c
src/simple/: CMakeLists.txt  simple.c
src/utils/: CMakeLists.txt  configure.c  errors.c  hash_table.c  lists.c  memory.c  messages.c  misc.c  queue.c  stack.c  xxhash.h
tests/non-semantic/: test1.s
tests/non-semantic/failing/: circular_imports.s  circular_imports1.s  imports.s
tests/non-semantic/passing/: assignment.s  casts.s  classdata.s  classdef.s  destdef.s  destroy.s  dodef.s  expressions.s  fordef.s  funccall.s  ifdef.s  import.s  importall.s  methdata.s  methoddef.s  switchdef.s  whiledef.s
